# PAD_HE

./: 5_rotation.cpp  CMakeLists.txt  README.md  applyPLCPSimulation.cpp  applyPLCPSimulation.h  encodersplain.cpp  encodersplain.h  encryptedAppx.cpp  encryptedAppx.h  generateplaintextMRP.cpp  generateplaintextMRP.h  initializationPLCP.cpp  initializationPLCP.h  plcpOperations.cpp  plcpOperations.h  prepareVecMatMRP.cpp  prepareVecMatMRP.h  printCont.cpp  printCont.h  rawplain.cpp  rawplain.h  secretShare.cpp  secretShare.h
all_data/y10_u2/: Dim.txt  sensor_noise.txt
all_data/y10_u2/PreCompute/: Acl.txt  Gamma.txt  KG.txt  KL.txt  Kx.txt  kxuG.txt  process_noise.txt  uG.txt  xG.txt
all_data/y20_u4/: Dim.txt  W.txt  ind_1_Inp.txt  ind_2_Inp.txt  process_noise.txt  reluArr.txt  reluInp.txt  sensor_noise.txt
all_data/y20_u4/PreCompute/: Acl.txt  Gamma.txt  KG.txt  KL.txt  Kx.txt  kxuG.txt  uG.txt  xG.txt
all_data/y50_u10/: Dim.txt  W.txt  ind_1_Inp.txt  ind_2_Inp.txt  process_noise.txt  reluArr.txt  reluInp.txt  sensor_noise.txt
all_data/y50_u10/PreCompute/: Acl.txt  Gamma.txt  KG.txt  KL.txt  Kx.txt  kxuG.txt  uG.txt  xG.txt
